# fetch_api_ros_package

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: computer_bringup.launch  gazebo_bringup.launch  robot_bringup.launch
scripts/: collision_demo.py  home_position.py  pick_place_demo.py  test.py  test_distance.py  test_pick_place _with_base.py  test_pick_place.py  test_safe_postures.py
src/fetch_api/: arm_control.py  base_control.py  camera_modules.py  head_control.py  pick_place.py  robot.py  scene.py  speech_control.py  torso_control.py
